<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fastacash.opensdk.FastaSampleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fastShareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/fastaShareText" />

            <Button
                android:id="@+id/fastShortButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fastShareButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/fastaShortText" />

            <Button
                android:id="@+id/fastaSecureShortButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fastShortButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/fastaSecureShortText" />

            <Button
                android:id="@+id/fastaShotButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fastaSecureShortButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/fastaShotText" />

            <Button
                android:id="@+id/fastaScreenShotButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fastaShotButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/fastaScreenShotText" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
