<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/fastaShortenRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1">

        <RelativeLayout
            android:id="@+id/shortenUrlRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:background="@drawable/shape_rectangle_gray_round_edge">

            <EditText
                android:id="@+id/urlEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/shortenButton"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/httpText"
                android:maxLength="100"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <Button
                android:id="@+id/shortenButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/shape_rectangle_gray_border"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/shortenCapsText"
                android:textSize="16dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fastalinkRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shortenUrlRelativeLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/fastalinkTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/fastaLinkText"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/fastaLinkEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toRightOf="@+id/fastalinkTextView"
                android:background="@drawable/shape_rectangle_gray_round_edge"
                android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:gravity="center_vertical"
                android:hint="@string/customizeYourUrlText"
                android:maxLength="20"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/shortlinkRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fastalinkRelativeLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:visibility="gone">

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_margin="10dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/customUrlTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:autoLink="web"
                android:gravity="center"
                android:linksClickable="true"
                android:padding="5dp"
                android:text=""
                android:textColorLink="@color/blueColor"
                android:textSize="16dp" />

            <Button
                android:id="@+id/copyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customUrlTextView"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/shape_rectangle_gray_round_edge"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="10dp"
                android:text="@string/copyCapsText"
                android:textSize="16dp" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
